--- a/index.css
+++ b/index.css
@@ -1,13 +1,113 @@
 .markdown-body {
-    --color-primary: #1e88e5;
+    --color-primary: rgb(168, 6, 160);
+    font-weight: 500;
+}
+
+.markdown-body * {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.markdown-body>* {
+    margin: 2px 20px;
+}
+
+.markdown-body {
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-weight: 700;
+    }
+}
+
+
+.markdown-body {
+
+    h1,
+    h2,
+    h3 {
+        margin: 10px 0px;
+        padding: 0 15px;
+        border-left: 5px solid var(--color-primary);
+    }
+}
+
+.markdown-body hr {
+    margin: 10px 0px;
+    border: 2px solid var(--color-primary);
 }
 
 .markdown-body blockquote {
     border-left: 4px solid var(--color-primary);
-    padding-left: 1rem;
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: 1rem;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-left: 5px;
+}
+
+.markdown-body table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.markdown-body img {
+    width: 100%;
+    max-width: 100%;
+}
+
+.markdown-body table {
+
+    border-radius: 10px;
+
+    th,
+    td {
+        padding: 2px;
+        border: 1px solid var(--color-primary);
+    }
+}
+
+.markdown-body {
+
+    strong,
+    b {
+        font-weight: 700;
+    }
+
+    s {
+        text-decoration: line-through;
+        text-decoration-color: var(--color-primary);
+    }
+
+    em {
+        font-style: italic;
+    }
+}
+
+.markdown-body a {
+    color: var(--color-primary);
+    text-decoration: none;
+}
+
+.markdown-body a:hover {
+    text-decoration: underline;
+}
+
+.markdown-body code {
+    background-color: #f1f1f1;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.markdown-body pre code {
+    display: block;
+    padding: 10px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+}
+
+.markdown-body ul {
+    list-style-type: disc;
+    padding-left: 20px;
 }
